fix some html links

--- a/references.bib
+++ b/references.bib
@@ -1306,3 +1306,117 @@
   year={2020},
   publisher={Taylor \& Francis}
 }
+@inproceedings{ishii1997tangible,
+  title={Tangible bits: towards seamless interfaces between people, bits and atoms},
+  author={Ishii, Hiroshi and Ullmer, Brygg},
+  booktitle={Proceedings of the ACM SIGCHI Conference on Human factors in computing systems},
+  pages={234--241},
+  year={1997}
+}
+
+@article{fishkin2004taxonomy,
+  title={A taxonomy for and analysis of tangible interfaces},
+  author={Fishkin, Kenneth P},
+  journal={Personal and Ubiquitous computing},
+  volume={8},
+  number={5},
+  pages={347--358},
+  year={2004},
+  publisher={Springer}
+}
+@book{dourish2001action,
+  title={Where the action is: the foundations of embodied interaction},
+  author={Dourish, Paul},
+  year={2001},
+  publisher={MIT press}
+} 
+
+@inproceedings{marshall2003conceptualising,
+  title={Conceptualising tangibles to support learning},
+  author={Marshall, Paul and Price, Sara and Rogers, Yvonne},
+  booktitle={Proceedings of the 2003 conference on Interaction design and children},
+  pages={101--109},
+  year={2003}
+}
+
+@article{morrison2020torino,
+  title={Torino: A tangible programming language inclusive of children with visual disabilities},
+  author={Morrison, Cecily and Villar, Nicolas and Thieme, Anja and Ashktorab, Zahra and Taysom, Eloise and Salandin, Oscar and Cletheroe, Daniel and Saul, Greg and Blackwell, Alan F and Edge, Darren and others},
+  journal={Human--Computer Interaction},
+  volume={35},
+  number={3},
+  pages={191--239},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+@article{ullmer2005token,
+  title={Token+ constraint systems for tangible interaction with digital information},
+  author={Ullmer, Brygg and Ishii, Hiroshi and Jacob, Robert JK},
+  journal={ACM Transactions on Computer-Human Interaction (TOCHI)},
+  volume={12},
+  number={1},
+  pages={81--118},
+  year={2005},
+  publisher={ACM New York, NY, USA}
+}
+@article{shaer2010tangible,
+  title={Tangible user interfaces: past, present, and future directions},
+  author={Shaer, Orit and Hornecker, Eva and others},
+  journal={Foundations and Trends{\textregistered} in Human--Computer Interaction},
+  volume={3},
+  number={1--2},
+  pages={4--137},
+  year={2010},
+  publisher={Now Publishers, Inc.}
+}
+@book{ullmer2022weaving,
+  title={Weaving fire into form: Aspirations for tangible and embodied interaction},
+  author={Ullmer, Brygg and Shaer, Orit and Mazalek, Ali and Hummels, Caroline},
+  year={2022},
+  publisher={Morgan \& Claypool}
+}
+@inproceedings{zhu2025livingloom,
+author = {Zhu, Jingwen and Chang, Samantha and Zhao, Ruth and Kao, Cindy Hsin-Liu},
+title = {LivingLoom: Investigating Human-Plant Symbiosis Through Integrating Living Plants Into (E-)Textiles},
+year = {2025},
+isbn = {9798400713941},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3706598.3713156},
+doi = {10.1145/3706598.3713156},
+abstract = {LivingLoom is a design inquiry that proposes a post-anthropocentric approach to fabrication by integrating living plants directly into textiles. Industrial textile fabrication views plants as passive resources. They are grown, harvested, and spun into yarns for textile production, mainly to serve human needs. While efficient, this approach overlooks the intrinsic value of these organisms as living beings. LivingLoom fabrication approach wet-spins biodegradable yarns with seeds that can be further integrated into textiles that can sprout and grow. We present a design space for incorporating microgreen seeds into textiles with a 10-day growth cycle, leveraging care-based fabrication and interaction. We conducted a three-day user study to understand how people wear and care for plant-integrated textiles, revealing new possibilities for living textiles and care-based interactions. LivingLoom examines the intimacy between humans and plants in textile forms, shedding light on the design potential for the care-based fabrication of (e-)textiles.},
+booktitle = {Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems},
+articleno = {773},
+numpages = {18},
+keywords = {plants, wearable, e-textiles, care-based interactions},
+location = {
+},
+series = {CHI '25}
+}
+@misc{alavi2019introduction,
+  title={Introduction to human-building interaction (hbi) interfacing hci with architecture and urban design},
+  author={Alavi, Hamed S and Churchill, Elizabeth F and Wiberg, Mikael and Lalanne, Denis and Dalsgaard, Peter and Fatah gen Schieck, Ava and Rogers, Yvonne},
+  journal={ACM Transactions on Computer-Human Interaction (TOCHI)},
+  volume={26},
+  number={2},
+  pages={1--10},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
+@misc{landay2019smartinterfaces,
+  author       = {James Landay},
+  title        = {Smart Interfaces for Human‐Centered AI},
+  howpublished = {Stanford HAI News},
+  year         = {2019},
+  month        = {Mar},
+  day          = {12},
+  url          = {https://hai.stanford.edu/news/smart-interfaces-human-centered-ai},
+  note         = {Accessed: 2025-09-13}
+}
+@inproceedings{alexander2018grand,
+  title={Grand challenges in shape-changing interface research},
+  author={Alexander, Jason and Roudaut, Anne and Steimle, J{\"u}rgen and Hornb{\ae}k, Kasper and Bruns Alonso, Miguel and Follmer, Sean and Merritt, Timothy},
+  booktitle={Proceedings of the 2018 CHI conference on human factors in computing systems},
+  pages={1--14},
+  year={2018}
+}
