localised all image for wk7 lecture

--- a/references.bib
+++ b/references.bib
@@ -1420,3 +1420,26 @@ series = {CHI '25}
   pages={1--14},
   year={2018}
 }
+
+@book{scneiderman1992designing,
+  title={Designing the user interface: Strategies for effective human-computer interaction},
+  author={Scneiderman, Ben},
+  year={1992},
+  publisher={Addison-Wesley}
+}
+@inproceedings{surtherland1967ar,
+author = {Sutherland, Ivan E.},
+title = {A head-mounted three dimensional display},
+year = {1968},
+isbn = {9781450378994},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1476589.1476686},
+doi = {10.1145/1476589.1476686},
+abstract = {The fundamental idea behind the three-dimensional display is to present the user with a perspective image which changes as he moves. The retinal image of the real objects which we see is, after all, only two-dimensional. Thus if we can place suitable two-dimensional images on the observer's retinas, we can create the illusion that he is seeing a three-dimensional object. Although stereo presentation is important to the three-dimensional illusion, it is less important than the change that takes place in the image when the observer moves his head. The image presented by the three-dimensional display must change in exactly the way that the image of a real object would change for similar motions of the user's head. Psychologists have long known that moving perspective images appear strikingly three-dimensional even without stereo presentation; the three-dimensional display described in this paper depends heavily on this "kinetic depth effect."},
+booktitle = {Proceedings of the December 9-11, 1968, Fall Joint Computer Conference, Part I},
+pages = {757–764},
+numpages = {8},
+location = {San Francisco, California},
+series = {AFIPS '68 (Fall, part I)}
+}
