--- a/references.bib
+++ b/references.bib
@@ -1443,3 +1443,14 @@ numpages = {8},
 location = {San Francisco, California},
 series = {AFIPS '68 (Fall, part I)}
 }
+
+
+@ARTICLE{steed-we-wait:2018,
+AUTHOR={Steed, Anthony  and Pan, Ye  and Watson, Zillah  and Slater, Mel },
+TITLE={“We Wait”—The Impact of Character Responsiveness and Self Embodiment on Presence and Interest in an Immersive News Experience},
+JOURNAL={Frontiers in Robotics and AI},
+VOLUME={5},
+YEAR={2018},
+URL={https://www.frontiersin.org/journals/robotics-and-ai/articles/10.3389/frobt.2018.00112},
+DOI={10.3389/frobt.2018.00112},
+}
