--- a/references.bib
+++ b/references.bib
@@ -1454,3 +1454,50 @@ YEAR={2018},
 URL={https://www.frontiersin.org/journals/robotics-and-ai/articles/10.3389/frobt.2018.00112},
 DOI={10.3389/frobt.2018.00112},
 }
+@inproceedings{wang2025seeingsound,
+author = {Wang, Yichen and Xi, Mingze and Adcock, Matt and Patrick Martin, Charles},
+title = {Seeing the Sound: Supporting Musical Collaboration with Augmented Reality},
+year = {2025},
+isbn = {9798400712890},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3698061.3726905},
+doi = {10.1145/3698061.3726905},
+abstract = {In musical collaboration, digital musical instruments often hinder effective communication and engagement by restricting visibility and limiting gestural and non-verbal interactions. These challenges reduce musicians’ situational awareness and complicate cohesive performance. To address this, we developed a head-mounted augmented reality (AR) system to enhance collaborative musical experiences by visualising musicians’ hand movements, eye gaze positions, and instrument interactions in real-time. We conducted a user study involving four pairs of musicians performing live music using different AR interface configurations. The results suggest that the AR system can enhance situational awareness and assist collaboration, as reflected in questionnaire responses. Interviews indicated that real-time visualisations of bodily movements and interactions helped participants better understand the collaborative process and anticipate their collaborators’ actions. These findings point to the potential of AR-assisted visualisation to support creative collaboration by tailoring visual information to different needs. Future research could explore its application in broader contexts of real-time creative cooperation.},
+booktitle = {Proceedings of the 2025 Conference on Creativity and Cognition},
+pages = {99–112},
+numpages = {14},
+keywords = {Digital Musical Instruments (DMIs), Collaboration, Creativity Support Tools (CSTs), Situational Awareness, Augmented Reality (AR)},
+location = {
+},
+series = {C&C '25}
+}
+@article{benford2013performancewild,
+author = {Benford, Steve and Greenhalgh, Chris and Crabtree, Andy and Flintham, Martin and Walker, Brendan and Marshall, Joe and Koleva, Boriana and Rennick Egglestone, Stefan and Giannachi, Gabriella and Adams, Matt and Tandavanitj, Nick and Row Farr, Ju},
+title = {Performance-Led Research in the Wild},
+year = {2013},
+issue_date = {July 2013},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {20},
+number = {3},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/2491500.2491502},
+doi = {10.1145/2491500.2491502},
+abstract = {We explore the approach of performance-led research in the wild in which artists drive the creation of novel performances with the support of HCI researchers that are then deployed and studied at public performance in cultural settings such as galleries, festivals and on the city streets. We motivate the approach and then describe how it consists of three distinct activities -- practice, studies and theory -- that are interleaved in complex ways through nine different relationships. We present a historical account of how the approach has evolved over a fifteen-year period, charting the evolution of a complex web of projects, papers, and relationships between them. We articulate the challenges of pursuing each activity as well as overarching challenges of balancing artistic and research interests, flexible management of relationships, and finally ethics.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = jul,
+articleno = {14},
+numpages = {22},
+keywords = {Art, ethnography, in the wild, methodology, performance, performance-led, theory}
+}
+@article{fitts1954information,
+  title={The information capacity of the human motor system in controlling the amplitude of movement.},
+  author={Fitts, Paul M},
+  journal={Journal of experimental psychology},
+  volume={47},
+  number={6},
+  pages={381},
+  year={1954},
+  publisher={American Psychological Association}
+}
