updated ready for evaluation

--- a/references.bib
+++ b/references.bib
@@ -1501,3 +1501,39 @@ keywords = {Art, ethnography, in the wild, methodology, performance, performance
   year={1954},
   publisher={American Psychological Association}
 }
+
+@inproceedings{martin-exploring-percussive-gesture:2014,
+author = {Martin, Charles and Gardner, Henry and Swift, Ben},
+title = {Exploring percussive gesture on iPads with ensemble metatone},
+year = {2014},
+isbn = {9781450324731},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2556288.2557226},
+doi = {10.1145/2556288.2557226},
+abstract = {Percussionists are unique among western classical instrumentalists in that their artistic practice is defined by an approach to interaction rather than their instruments. While percussionists are accustomed to exploring non-traditional objects to create music, these objects have yet to encompass touch-screen computing devices to any great extent. The proliferation and popularity of these devices now presents an opportunity to explore their use in combining computer-generated sound together with percussive interaction in a musical ensemble.This paper examines Ensemble Metatone, a group formed to explore the "infiltration" of iPad-based musical instruments into a free-improvisation percussion ensemble. We discuss the design approach for two different iPad percussion instruments and the methodology for exploring them with the group over a series of rehearsals and performances. Qualitative analysis of discussions throughout this process shows that the musicians developed a vocabulary of gestures and musical interactions to make musical sense of these new instruments.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {1025–1028},
+numpages = {4},
+keywords = {expression, gesture, multitouch, music, percussion, user experience},
+location = {Toronto, Ontario, Canada},
+series = {CHI '14}
+}
+
+@inproceedings{martin-intelligent-agents:2016,
+author = {Martin, Charles and Gardner, Henry and Swift, Ben and Martin, Michael},
+title = {Intelligent Agents and Networked Buttons Improve Free-Improvised Ensemble Music-Making on Touch-Screens},
+year = {2016},
+isbn = {9781450333627},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2858036.2858269},
+doi = {10.1145/2858036.2858269},
+abstract = {We present the results of two controlled studies of free-improvised ensemble music-making on touch-screens. In our system, updates to an interface of harmonically-selected pitches are broadcast to every touch-screen in response to either a performer pressing a GUI button, or to interventions from an intelligent agent. In our first study, analysis of survey results and performance data indicated significant effects of the button on performer preference, but of the agent on performance length. In the second follow-up study, a mixed-initiative interface, where the presence of the button was interlaced with agent interventions, was developed to leverage both approaches. Comparison of this mixed-initiative interface with the always-on button-plus-agent condition of the first study demonstrated significant preferences for the former. The different approaches were found to shape the creative interactions that take place. Overall, this research offers evidence that an intelligent agent and a networked GUI both improve aspects of improvised ensemble music-making.},
+booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+pages = {2295–2306},
+numpages = {12},
+keywords = {mobile music, design, creativity support tools, collaborative interaction, agent},
+location = {San Jose, California, USA},
+series = {CHI '16}
+}
