lots of updates for week 9

--- a/references.bib
+++ b/references.bib
@@ -1537,3 +1537,91 @@ keywords = {mobile music, design, creativity support tools, collaborative intera
 location = {San Jose, California, USA},
 series = {CHI '16}
 }
+
+@incollection{hutchins-direct-manipulation:1986,
+  title={Direct manipulation interfaces},
+  author={Hutchins, Edwin L and Hollan, James D and Norman, Donald A},
+  booktitle={User centered system design},
+  pages={87--124},
+  year={1986},
+  publisher={CRC Press},
+  url={https://worrydream.com/refs/Hutchins_1985_-_Direct_Manipulation_Interfaces.pdf}
+}
+
+@incollection{norman-cognitive-engineering:1986,
+  title={Cognitive engineering},
+  author={Norman, Donald A},
+  booktitle={User centered system design},
+  pages={31--62},
+  year={1986},
+  publisher={CRC Press}
+}
+
+@inproceedings{hornecker2005design,
+  title={A design theme for tangible interaction: embodied facilitation},
+  author={Hornecker, Eva},
+  booktitle={ECSCW 2005: Proceedings of the Ninth European Conference on Computer-Supported Cooperative Work, 18--22 September 2005, Paris, France},
+  pages={23--43},
+  year={2005},
+  organization={Springer},
+  doi={10.1007/1-4020-4023-7_2}
+}
+
+@article{sacks-simplest-systematics:1978,
+  title={A simplest systematics for the organization of turn-taking for conversation},
+  author={Sacks, Harvey and Schegloff, Emanuel A and Jefferson, Gail},
+  journal={Language},
+  volume={50},
+  pages={696--735},
+  year={1978},
+}
+
+@misc{ricchetti-social-games:2022,
+  author = {Matthew Ricchetti},
+  year = {2022},
+  title={What really makes social games social?},
+  howpublished={Conference Talk},
+  url={https://www.gdcvault.com/play/1015724/What-Really-Makes-Social-Games}
+}
+
+@book{norman-emotional-design:2005,
+  title={Emotional design: Why we love (or hate) everyday things},
+  author={Norman, Don},
+  year={2005},
+  publisher={Basic books}
+}
+
+@incollection{ortony2012affect,
+  title={Affect and Proto-Affect in Effective Functioning},
+  author={Ortony, Andrew and Norman, Donald A and Revelle, William},
+  booktitle={Who Needs Emotions?: The Brain Meets the Robot},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{yohanan-haptic-creature:2008,
+  title={The haptic creature project: Social human-robot interaction through affective touch},
+  author={Yohanan, Steve and MacLean, Karon E},
+  booktitle={Proceedings of the AISB 2008 Symposium on the Reign of Catz \& Dogs: The Second AISB Symposium on the Role of Virtual Creatures in a Computerised Society},
+  volume={1},
+  pages={7--11},
+  year={2008}
+}
+
+@inproceedings{yohanan-haptic-creature-assessment:2011,
+author = {Yohanan, Steve and MacLean, Karon E.},
+title = {Design and assessment of the haptic creature's affect display},
+year = {2011},
+isbn = {9781450305617},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1957656.1957820},
+doi = {10.1145/1957656.1957820},
+abstract = {The Haptic Creature is a small, animal-like robot we have developed to investigate the role of touch in communicating emotions between humans and robots. This paper presents a study examining how successful our robot is at communicating its emotional state through touch. Results show that, regardless of the human's gender or background with animals, the robot is effective in communicating its state of arousal but less so for valence. Also included are descriptions of the design of the Haptic Creature's emotion model and suggested improvements based on results of the study.},
+booktitle = {Proceedings of the 6th International Conference on Human-Robot Interaction},
+pages = {473–480},
+numpages = {8},
+keywords = {affect, affect display, affective touch, emotion, haptics, human-robot interaction (hri), robot pets, socially interactive robots, touch},
+location = {Lausanne, Switzerland},
+series = {HRI '11}
+}
