--- a/references.bib
+++ b/references.bib
@@ -1625,3 +1625,10 @@ keywords = {affect, affect display, affective touch, emotion, haptics, human-rob
 location = {Lausanne, Switzerland},
 series = {HRI '11}
 }
+
+@article{kahneman-fast-slow-thinking:2011,
+  title={Fast and slow thinking},
+  author={Kahneman, Daniel},
+  journal={Allen Lane and Penguin Books, New York},
+  year={2011}
+}
