--- a/references.bib
+++ b/references.bib
@@ -1632,3 +1632,12 @@ series = {HRI '11}
   journal={Allen Lane and Penguin Books, New York},
   year={2011}
 }
+
+@inproceedings{wang-cubing-sound:2022,
+	author = {Wang, Yichen and Martin, Charles Patrick},
+	booktitle = {International Conference on New Interfaces for Musical Expression},
+	year = {2022},
+	month = {jun 16},
+	note = {https://nime.pubpub.org/pub/w82of2do},
+	title = {Cubing {Sound}: Designing a {NIME} for {Head}-mounted {Augmented} {Reality}},
+}
