--- a/references.bib
+++ b/references.bib
@@ -1641,3 +1641,15 @@ series = {HRI '11}
 	note = {https://nime.pubpub.org/pub/w82of2do},
 	title = {Cubing {Sound}: Designing a {NIME} for {Head}-mounted {Augmented} {Reality}},
 }
+
+@incollection{houde1997prototypes,
+  title={What do prototypes prototype?},
+  author={Houde, Stephanie and Hill, Charles},
+  booktitle={Handbook of human-computer interaction},
+  editor = {Marting G. Helander and Thomas K. Landauer and Prasad V. Prabhu},
+  pages={367--381},
+  year={1997},
+  publisher = {North-Holland},
+  doi = {https://doi.org/10.1016/B978-044481862-1.50082-0},
+  url={https://hci.stanford.edu/courses/cs247/2012/readings/WhatDoPrototypesPrototype.pdf}
+}
