working prototyping tutorial

--- a/references.bib
+++ b/references.bib
@@ -1650,6 +1650,24 @@ series = {HRI '11}
   pages={367--381},
   year={1997},
   publisher = {North-Holland},
-  doi = {https://doi.org/10.1016/B978-044481862-1.50082-0},
+  doi = {10.1016/B978-044481862-1.50082-0},
   url={https://hci.stanford.edu/courses/cs247/2012/readings/WhatDoPrototypesPrototype.pdf}
+}
+
+@inproceedings{odom-research-prototype:2016,
+author = {Odom, William and Wakkary, Ron and Lim, Youn-kyung and Desjardins, Audrey and Hengeveld, Bart and Banks, Richard},
+title = {From Research Prototype to Research Product},
+year = {2016},
+isbn = {9781450333627},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/2858036.2858447},
+doi = {10.1145/2858036.2858447},
+abstract = {Prototypes and prototyping have had a long and important history in the HCI community and have played a highly significant role in creating technology that is easier and more fulfilling to use. Yet, as focus in HCI is expanding to investigate complex matters of human relationships with technology over time in the intimate and contested contexts of everyday life, the notion of a 'prototype' may not be fully sufficient to support these kinds of inquiries. We propose the research product as an extension and evolution of the research prototype to support generative inquiries in this emerging research area. We articulate four interrelated qualities of research products inquiry-driven, finish, fit, and independent and draw on these qualities to describe and analyze five different yet related design research cases we have collectively conducted over the past six years. We conclude with a discussion of challenges and opportunities for crafting research products and the implications they suggest for future design-oriented HCI research.},
+booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+pages = {2549–2561},
+numpages = {13},
+keywords = {design, interaction design research, research product},
+location = {San Jose, California, USA},
+series = {CHI '16}
 }
