tiny updates; mostly on colab

--- a/references.bib
+++ b/references.bib
@@ -1671,3 +1671,9 @@ keywords = {design, interaction design research, research product},
 location = {San Jose, California, USA},
 series = {CHI '16}
 }
+@book{delwiche2019little,
+  title={The little SAS book: a primer},
+  author={Delwiche, Lora D and Slaughter, Susan J},
+  year={2019},
+  publisher={SAS institute}
+}
