updating the tutorial

--- a/references.bib
+++ b/references.bib
@@ -307,11 +307,38 @@
 }
 
 @inproceedings{choi2024scenario,
-  title     = {Scenario-Based Design to Envision How GenAI Can Support Sound Design Practices},
-  author    = {Choi, Minsik and Andres, Josh and Hunter, Alexander and Martin, Charles Patrick},
-  booktitle = {Proceedings of the 36th Australian Computer-Human Interaction Conference},
-  year      = {2024},
-  url       = {https://yorkcla.github.io/assets/pdf/choi2024scenario.pdf}
+author = {Choi, Minsik and Andres, Josh and Hunter, Alexander and Martin, Charles Patrick},
+title = {Scenario-Based Design to Envision How GenAI Can Support Sound Design Practices},
+year = {2025},
+isbn = {9798400715099},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3726986.3727042},
+doi = {10.1145/3726986.3727042},
+abstract = {Sound design involves crafting communicative sonic interfaces such as warning and confirmation signals. An interactive sound design method using musical tension and release with a supporting tool has been explored for practitioners without musical expertise; however, there remain needs for further development of the tool, regarding recommended samples and translated musical knowledge. This paper reports on a project that investigates the use of generative AI applications in sonic interaction design through practitioner-based scenarios. We present two case studies that highlight domain challenges based on a prior study of sound and UX designers, develop two practitioner scenarios from the contexts, and create a prototype of an AI-powered sound design tool with four GenAI applications and four supporting features, tailored to the scenarios. We finally provide reflections on the overall design process and the prototype. This study contributes by extending domain needs into a tangible AI-driven interface through scenario-based design.},
+booktitle = {Proceedings of the 36th Australasian Conference on Human-Computer Interaction},
+pages = {640–646},
+numpages = {7},
+keywords = {Sonic Interaction Design, Creativity Support Tools, Generative AI, Scenario-Based Design},
+series = {OzCHI '24}
+}
+
+@inproceedings{choi-tonal-cognition:2024,
+author = {Choi, Minsik and Andres, Josh and Martin, Charles Patrick},
+title = {Tonal Cognition in Sonification: Exploring the Needs of Practitioners in Sonic Interaction Design},
+year = {2024},
+isbn = {9798400709685},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3678299.3678321},
+doi = {10.1145/3678299.3678321},
+abstract = {Research into tonal music examines the structural relationships among sounds and how they align with our auditory perception. The exploration of integrating tonal cognition into sonic interaction design, particularly for practitioners lacking extensive musical knowledge, and developing an accessible software tool, remains limited. We report on a study of designers to understand the sound creation practices of industry experts and explore how infusing tonal music principles into a sound design tool can better support their craft and enhance the sonic experiences they create. Our study collected qualitative data through semi-structured individual and focus group interviews with six participants. We developed a low-fidelity prototype sound design tool that involves practical methods of functional harmony and interaction design discussed in focus groups. We identified four themes through reflexive thematic analysis: decision-making, domain knowledge and terminology, collaboration, and contexts in sound creation. Finally, we discussed design considerations for an accessible sonic interaction design tool that aligns auditory experience more closely with tonal cognition.},
+booktitle = {Proceedings of the 19th International Audio Mostly Conference: Explorations in Sonic Cultures},
+pages = {218–228},
+numpages = {11},
+keywords = {auditory display, creativity support tools, embodied music cognition, sonic interaction design, tonal cognition, user-centered design},
+location = {Milan, Italy},
+series = {AM '24}
 }
 
 @misc{carden-personas:2023,
@@ -496,6 +523,24 @@
   title        = {Crazy 8's},
   year         = {2020},
   url          = {https://designsprintkit.withgoogle.com/methodology/phase3-sketch/crazy-8s}
+}
+
+@inproceedings{adiwangsa-exercising:2024,
+author = {Adiwangsa, Michelle and Sweetser, Penny and Stevenson, Duncan and Suominen, Hanna and Xi, Mingze},
+title = {Exploring Opportunities for Augmenting Homes to Support Exercising},
+year = {2024},
+isbn = {9798400703300},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3613904.3641897},
+doi = {10.1145/3613904.3641897},
+abstract = {Although exercising at home has benefits, it is not always engaging or motivating. Augmented Reality (AR) head-mounted displays (HMDs) offer the potential to make in-home exercising and exergaming more inclusive and immersive, but there is limited research investigating how such systems can be designed. We employed a participatory design approach involving semi-structured interviews to investigate how homes can be augmented to facilitate exercising experiences. We developed 10 recommendations for developing home-based exercising experiences using AR HMDs. Our results further contribute to the existing body of research on the use of AR for exercising, home applications, and everyday objects by presenting the first foundational study investigating the wide range of exercises that can be supported through AR HMDs in home environments and the different ways home elements may support these exercises, and laying the groundwork for future work developing home-based exergaming through AR HMDs to increase people’s physical activity levels.},
+booktitle = {Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
+articleno = {311},
+numpages = {14},
+keywords = {Augmented reality, Exercising, Exergaming, Home environment, Participatory Design},
+location = {Honolulu, HI, USA},
+series = {CHI '24}
 }
 
 @inproceedings{adiwangsa-charades:2025,
@@ -1671,9 +1716,96 @@ keywords = {design, interaction design research, research product},
 location = {San Jose, California, USA},
 series = {CHI '16}
 }
+
 @book{delwiche2019little,
   title={The little SAS book: a primer},
   author={Delwiche, Lora D and Slaughter, Susan J},
   year={2019},
   publisher={SAS institute}
+}
+
+@article{davis-quantifying-collaboration:2017,
+author = {Davis, N. and Hsiao, C. and Singh, K. Y. and Lin, B. and Magerko, B.},
+title = {Quantifying Collaboration with a Co-Creative Drawing Agent},
+year = {2017},
+issue_date = {December 2017},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {7},
+number = {4},
+issn = {2160-6455},
+url = {https://doi.org/10.1145/3009981},
+doi = {10.1145/3009981},
+abstract = {This article describes a new technique for quantifying creative collaboration and applies it to the user study evaluation of a co-creative drawing agent. We present a cognitive framework called creative sense-making that provides a new method to visualize and quantify the interaction dynamics of creative collaboration, for example, the rhythm of interaction, style of turn taking, and the manner in which participants are mutually making sense of a situation. The creative sense-making framework includes a qualitative coding technique, interaction coding software, an analysis method, and the cognitive theory behind these applications. This framework and analysis method are applied to empirical studies of the Drawing Apprentice collaborative sketching system to compare human collaboration with a co-creative AI agent vs. a Wizard of Oz setup. The analysis demonstrates how the proposed technique can be used to analyze interaction data using continuous functions (e.g., integrations and moving averages) to measure and evaluate how collaborations unfold through time.},
+journal = {ACM Trans. Interact. Intell. Syst.},
+month = dec,
+articleno = {19},
+numpages = {25},
+keywords = {qualitative coding, interaction dynamics, evaluation methods, drawing, creative agents, collaboration, Creativity}
+}
+
+@inproceedings{deng-logic-bonbon:2022,
+author = {Deng, Jialin and Olivier, Patrick and Andres, Josh and Ellis, Kirsten and Wee, Ryan and Floyd Mueller, Florian},
+title = {Logic Bonbon: Exploring Food as Computational Artifact},
+year = {2022},
+isbn = {9781450391573},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3491102.3501926},
+doi = {10.1145/3491102.3501926},
+abstract = {In recognition of food's significant experiential pleasures, culinary practitioners and designers are increasingly exploring novel combinations of computing technologies and food. However, despite much creative endeavors, proposals and prototypes have so far largely maintained a traditional divide, treating food and technology as separate entities. In contrast, we present a “Research through Design” exploration of the notion of food as computational artifact: wherein food itself is the material of computation. We describe the Logic Bonbon, a dessert that can hydrodynamically regulate its flavor via a fluidic logic system. Through a study of experiencing the Logic Bonbon and reflection on our design practice, we offer a provisional account of how food as computational artifact can mediate new interactions through a novel approach to food-computation integration, that promotes an enriched future of Human-Food Interaction.},
+booktitle = {Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems},
+articleno = {47},
+numpages = {21},
+keywords = {Edible Fluidics, Food Design, Human-Food Interaction},
+location = {New Orleans, LA, USA},
+series = {CHI '22}
+}
+
+@inproceedings{karim-internet-shutdown:2025,
+author = {Tahmidul Karim, Farhan and Zabin, Sardar Md. Saffat and Tarin, Ishika and Nurain, Novia and Islam, A. B. M. Alim Al},
+title = {Beyond the Blackout: Qualitative Insights and Sentiment Analysis on the Impact, Adaptation, and Design Solutions During the Internet Shutdown in Bangladesh},
+year = {2025},
+isbn = {9798400713958},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3706599.3719895},
+doi = {10.1145/3706599.3719895},
+abstract = {The recent period of Internet restriction in Bangladesh, which occurred from July 14 to August 5 during the anti-discrimination student movement, had a significant impact on individuals’ lives. This study aims to know how their communication, information access, and daily activities were affected and how they used to cope with that, again what were their expectations from social media and communication tools. Through interviews with 15 individuals from diverse demographics, supported by qualitative analysis and sentiment analysis, the findings provide valuable insights into the challenges faced, experiences shared, and recommendations offered by participants. Based on these findings, we propose design implications to develop a robust digital infrastructure capable of addressing similar challenges in future scenarios. Our work contributes to CHI by serving as a foundation for policymakers and designers to create effective solutions that mitigate the adverse effects of Internet shutdowns.},
+booktitle = {Proceedings of the Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
+articleno = {99},
+numpages = {9},
+keywords = {Qualitative Studies, Human-Computer Interaction},
+location = {
+},
+series = {CHI EA '25}
+}
+
+@article{maguire-thematic-analysis:2017,
+  title={Doing a thematic analysis: A practical, step-by-step guide for learning and teaching scholars.},
+  author={Maguire, Moira and Delahunt, Brid},
+  journal={All Ireland journal of higher education},
+  volume={9},
+  number={3},
+  year={2017},
+  doi={10.62707/aishej.v9i3.335},
+  url={https://ojs.aishe.org/index.php/aishe-j/article/view/335},
+}
+
+@inproceedings{bidwell-designing-mobile-storytelling:2010,
+author = {Bidwell, Nicola J. and Reitmaier, Thomas and Marsden, Gary and Hansen, Susan},
+title = {Designing with mobile digital storytelling in rural Africa},
+year = {2010},
+isbn = {9781605589299},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1753326.1753564},
+doi = {10.1145/1753326.1753564},
+abstract = {We reflect on activities to design a mobile application to enable rural people in South Africa's Eastern Cape to record and share their stories, which have implications for 'cross-cultural design,' and the wider use of stories in design. We based our initial concept for generating stories with audio and photos on cell-phones on a scenario informed by abstracting from digital storytelling projects globally and our personal experience. But insights from ethnography, and technology experiments involving storytelling, in a rural village led us to query our grounding assumptions and usability criteria. So, we implemented a method using cell-phones to localise storytelling, involve rural users and probe ways to incorporate visual and audio media. Products from this method helped us to generate design ideas for our current prototype which offers great flexibility. Thus we present a new way to depict stories digitally and a process for improving such software.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {1593–1602},
+numpages = {10},
+keywords = {rural, oral knowledge, mobile devices, ict4d, digital storytelling, dialogical approach to design, cross-cultural},
+location = {Atlanta, Georgia, USA},
+series = {CHI '10}
 }
