--- a/references.bib
+++ b/references.bib
@@ -1805,3 +1805,21 @@
   keywords  = {plants, wearable, e-textiles, care-based interactions},
   series    = {CHI '25}
 }
+
+@inproceedings{wobbrock-aligned-rank-transform:2011,
+author = {Wobbrock, Jacob O. and Findlater, Leah and Gergle, Darren and Higgins, James J.},
+title = {The aligned rank transform for nonparametric factorial analyses using only anova procedures},
+year = {2011},
+isbn = {9781450302289},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1978942.1978963},
+doi = {10.1145/1978942.1978963},
+abstract = {Nonparametric data from multi-factor experiments arise often in human-computer interaction (HCI). Examples may include error counts, Likert responses, and preference tallies. But because multiple factors are involved, common nonparametric tests (e.g., Friedman) are inadequate, as they are unable to examine interaction effects. While some statistical techniques exist to handle such data, these techniques are not widely available and are complex. To address these concerns, we present the Aligned Rank Transform (ART) for nonparametric factorial data analysis in HCI. The ART relies on a preprocessing step that "aligns" data before applying averaged ranks, after which point common ANOVA procedures can be used, making the ART accessible to anyone familiar with the F-test. Unlike most articles on the ART, which only address two factors, we generalize the ART to N factors. We also provide ARTool and ARTweb, desktop and Web-based programs for aligning and ranking data. Our re-examination of some published HCI results exhibits advantages of the ART.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {143–146},
+numpages = {4},
+keywords = {analysis of variance, anova, f-test, factorial analysis, nonparametric data, statistics},
+location = {Vancouver, BC, Canada},
+series = {CHI '11}
+}
